excel-com/tests/ui/apartment_cannot_cross_thread.stderr
error[E0277]: `Rc<()>` cannot be sent between threads safely
 --> tests/ui/apartment_cannot_cross_thread.rs:5:24
  |
5 |     std::thread::spawn(move || drop(apartment));
  |     ------------------ -------^^^^^^^^^^^^^^^^
  |     |                  |
  |     |                  `Rc<()>` cannot be sent between threads safely
  |     |                  within this `{closure@$DIR/tests/ui/apartment_cannot_cross_thread.rs:5:24: 5:31}`
  |     required by a bound introduced by this call
  |
  = help: within `{closure@$DIR/tests/ui/apartment_cannot_cross_thread.rs:5:24: 5:31}`, the trait `Send` is not implemented for `Rc<()>`
note: required because it appears within the type `PhantomData<Rc<()>>`
 --> $RUST/core/src/marker.rs
  |
  | pub struct PhantomData<T: PointeeSized>;
  |            ^^^^^^^^^^^
note: required because it appears within the type `ComApartment`
 --> src/internal/apartment.rs
  |
  | pub struct ComApartment {
  |            ^^^^^^^^^^^^
note: required because it's used within this closure
 --> tests/ui/apartment_cannot_cross_thread.rs:5:24
  |
5 |     std::thread::spawn(move || drop(apartment));
  |                        ^^^^^^^
note: required by a bound in `spawn`
 --> $RUST/std/src/thread/functions.rs
  |
  | pub fn spawn<F, T>(f: F) -> JoinHandle<T>
  |        ----- required by a bound in this function
...
  |     F: Send + 'static,
  |        ^^^^ required by this bound in `spawn`
