excel-com/tests/ui/apartment_cannot_cross_thread.rs
use excel_com::ComApartment;

fn main() {
    let apartment = ComApartment::sta().unwrap();
    std::thread::spawn(move || drop(apartment));
}
